# Lightly

./: CMakeLists.txt
kdecoration/: CMakeLists.txt  lightlysettings.h
kdecoration/config/: lightlydetectwidget.cpp
kstyle/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ecm_uninstall.cmake  lightlyhelper.cpp  lightlystyle.cpp  lightlystyle.h  lightlywindowmanager.cpp
kstyle/.qt/: QtDeploySupport.cmake
kstyle/animations/: lightlytransitionwidget.cpp
kstyle/colors/: Makefile
kstyle/config/: CMakeLists.txt
kstyle/debug/: lightlywidgetexplorer.cpp
kstyle/kdecoration/: Makefile  cmake_install.cmake
kstyle/kstyle/: Makefile  cmake_install.cmake  config-lightly.h
kstyle/kstyle/config/: Makefile  cmake_install.cmake
kstyle/liblightlycommon/: Makefile  cmake_install.cmake
liblightlycommon/: CMakeLists.txt  lightlyboxshadowrenderer.cpp
